gcc/testsuite/gcc.dg/cpp/pr36320.c
/* PR 36320 - #elif still requires valid expression.  */

/* { dg-do preprocess } */

int z;
#if 1
#elif   /* { dg-error "with no expression" } */
#endif
